<resources>
    <string name="app_name">Auction System</string>
    <string name="app_launcher_name">Auction System</string>
    <string name="symbol_currency">$</string>
    <string name="action_logout">Log out</string>
    <string name="action_new">New post</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_register">Create Account</string>
    <string name="label_login_username">Username</string>
    <string name="label_login_password">Password</string>
    <string name="label_login_password_confirm">Confirm</string>
    <string name="label_button_create_new_account">Create new account</string>
    <string name="label_button_login">Login</string>
    <string name="label_button_register">Register</string>
    <string name="msg_login_error">Username and password do not match. Please try again</string>
    <string name="msg_login_error_other">Unable to log in</string>
    <string name="title_activity_auction_item_detail">AuctionItemDetailActivity</string>
    <string name="label_button_detail_bid">Place bid</string>
    <string name="label_button_detail_bid_update">Update bid</string>
    <string name="label_button_detail_bid_submitted">Bid submitted</string>
    <string name="label_button_detail_bid_updated">Bid updated</string>
    <string name="label_button_detail_set_sold">Mark sold</string>
    <string name="label_register_name">Name</string>
    <string name="label_register_your_name">John Smith</string>
    <string name="label_register_your_email">john@smith.com</string>
    <string name="label_register_your_password">*****</string>
    <string name="label_register_confirm_password">*****</string>
    <string name="error_no_name">Enter a name</string>
    <string name="error_no_email">Enter an email address</string>
    <string name="error_invalid_email">Invalid email address</string>
    <string name="error_no_password_match">Passwords do not match</string>
    <string name="error_no_price">Enter a price</string>
    <string name="msg_register_success">Registered successfully!</string>
    <string name="msg_register_fail">Registeration failed!</string>
    <string name="msg_register_fail_already_exists">Username already exists</string>
    <string name="msg_post_success">Posted successfully!</string>
    <string name="msg_post_fail">Failed to post</string>
    <string name="title_tab_all_auctions">All</string>
    <string name="title_tab_my_bid">My bids</string>
    <string name="title_tab_my_posts">My posts</string>
    <string name="message_confirm_set_sold">Are you sure you want to mark sold?</string>
    <string name="label_yes">Yes</string>
    <string name="label_no">No</string>
    <string name="title_activity_new_item">NewItemActivity</string>
    <string name="action_settings">Settings</string>
    <string name="label_new_item_name">Name</string>
    <string name="label_new_item_desc">Description</string>
    <string name="label_new_price">Price</string>
    <string name="button_new_post">Post</string>
    <string name="hint_new_item_name">What is it?</string>
    <string name="hint_item_new_desc">A few words about the item</string>
    <string name="button_new_set_time">Set time</string>
    <string name="button_new_set_date">Set Date</string>
    <string name="label_new_post_expiry">Expiry</string>
    <string name="label_sold">Sold</string>
</resources>
