<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.matih.actionsystem.LoginActivity">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_activity_register"
        android:id="@+id/textView"
        android:gravity="center_horizontal"
        android:textSize="24sp" />

    <RelativeLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="center_vertical"
        android:layout_below="@+id/textView">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/linearLayout"
            android:gravity="center_horizontal" >

            <TextView
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:text="@string/label_register_name"
                android:id="@+id/textView_registerName"
                android:layout_alignTop="@+id/editText_Username"
                android:layout_alignBottom="@+id/editText_Username"
                android:textSize="16sp"
                android:paddingRight="5dp"
                android:gravity="right" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:ems="10"
                android:id="@+id/editText_registerName"
                android:layout_toRightOf="@+id/textView_registerName"
                android:hint="@string/label_register_your_name" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/linearLayout_Username"
            android:gravity="center_horizontal"
            android:layout_below="@+id/linearLayout">

            <TextView
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:text="@string/label_login_username"
                android:id="@+id/textView_Username"
                android:layout_alignTop="@+id/editText_Username"
                android:layout_alignBottom="@+id/editText_Username"
                android:textSize="16sp"
                android:paddingRight="5dp"
                android:gravity="right" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:ems="10"
                android:id="@+id/editText_registerUsername"
                android:layout_toRightOf="@+id/textView_Username"
                android:hint="@string/label_register_your_email" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/linearLayout_Password"
            android:layout_below="@+id/linearLayout_Username"
            android:gravity="center_horizontal">

            <TextView
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:text="@string/label_login_password"
                android:id="@+id/textView_Password"
                android:layout_alignTop="@+id/editText_Password"
                android:layout_alignBottom="@+id/editText_Password"
                android:textSize="16sp"
                android:paddingRight="5dp"
                android:gravity="right" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="10"
                android:id="@+id/editText_Password"
                android:layout_below="@+id/editText_Username"
                android:layout_toRightOf="@+id/textView_Password"
                android:hint="@string/label_register_your_password" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/linearLayout_Password"
            android:id="@+id/linearLayout_PasswordConfirm"
            android:gravity="center_horizontal"
            android:visibility="visible">

            <TextView
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:text="@string/label_login_password_confirm"
                android:id="@+id/textView_PasswordConfirm"
                android:layout_alignTop="@+id/editText_Password"
                android:layout_alignBottom="@+id/editText_Password"
                android:textSize="16sp"
                android:paddingRight="5dp"
                android:gravity="right" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="10"
                android:id="@+id/editText_registerPasswordConfirm"
                android:layout_below="@+id/editText_Username"
                android:layout_toRightOf="@+id/textView_Password"
                android:hint="@string/label_register_confirm_password" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/linearLayout_LoginButton"
            android:gravity="center_horizontal"
            android:layout_below="@+id/linearLayout_PasswordConfirm"
            android:paddingTop="10dp">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_button_register"
                android:id="@+id/button_Register"
                android:layout_below="@+id/linearLayout_Password"
                android:layout_alignRight="@+id/linearLayout_Password"
                android:layout_alignEnd="@+id/linearLayout_Password"
                android:textAllCaps="false"/>
        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>
