<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.matih.actionsystem.LoginActivity">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_activity_login"
        android:id="@+id/textView"
        android:gravity="center_horizontal"
        android:textSize="24sp" />

    <RelativeLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="center_vertical"
        android:layout_below="@+id/textView"
        android:background="@null">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/linearLayout_Username"
            android:gravity="center_horizontal">

            <TextView
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:text="@string/label_login_username"
                android:id="@+id/textView_Username"
                android:layout_alignTop="@+id/editText_Username"
                android:layout_alignBottom="@+id/editText_Username"
                android:textSize="16sp"
                android:paddingRight="5dp"
                android:gravity="right" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:ems="10"
                android:id="@+id/editText_Username"
                android:layout_toRightOf="@+id/textView_Username" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/linearLayout_Password"
            android:layout_below="@+id/linearLayout_Username"
            android:gravity="center_horizontal">

            <TextView
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:text="@string/label_login_password"
                android:id="@+id/textView_Password"
                android:layout_alignTop="@+id/editText_Password"
                android:layout_alignBottom="@+id/editText_Password"
                android:textSize="16sp"
                android:paddingRight="5dp"
                android:gravity="right" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="10"
                android:id="@+id/editText_Password"
                android:layout_below="@+id/editText_Username"
                android:layout_toRightOf="@+id/textView_Password" />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/linearLayout_LoginButton"
            android:gravity="center_horizontal"
            android:layout_below="@+id/linearLayout_Password"
            android:paddingTop="10dp">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_button_login"
                android:id="@+id/button_Login"
                android:layout_below="@+id/linearLayout_Password"
                android:layout_alignRight="@+id/linearLayout_Password"
                android:layout_alignEnd="@+id/linearLayout_Password"
                android:textAllCaps="false"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_button_create_new_account"
                android:id="@+id/button_create_new_account"
                android:background="@null"
                android:layout_below="@+id/linearLayout_LoginButton"
                android:textAllCaps="false"
                android:layout_centerHorizontal="true" />
        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>
